--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:FuckingManUp@1@localhost:5432/postgres?schema=public"
+DATABASE_URL="postgresql://nextjs_owner:adOo80UQGLbt@ep-floral-glade-a1sfypw3.ap-southeast-1.aws.neon.tech/nextjs?sslmode=require"
